This file documents the revision history for the Monitoring Webinterface Thruk.


next:
          - added new configuration setting: max_process_memory
          - Panorama View:
            - fixed memory leak in generic url panel

1.84-6   Wed Aug  6 11:24:12 CEST 2014
          - Panorama View:
            - support availability results in labels and speedometer

1.84-5   Wed Jul 16 13:30:05 CEST 2014
          - Reports
            - added cancel button for running reports
            - added progres bar for running reports
          - Panorama View:
            - added -or filter to all filter panels
            - added optional min/max values for speedometer
            - added invert switch for speedometer
            - background images can now be scaled
            - background images can have an offset
            - images and icons can be scaled
          - Bug Fixes
            - fixed pnp source not selectable anymore after revisiting panel settings
            - fixed applying panel source
            - fixed using multiple panorama custom filter

1.84-4   Mon Jun 23 17:44:32 CEST 2014
          - added show_error_reports mode 'both' which shows the error indicator but logs to server side
          - set default show_error_reports mode to 'both' to make error handling easier
          - support pnp urls with suffix
          - Panorama View:
            - added z-index option for icons
          - Bug Fixes
            - fixed rendering icons above dashboard settings window
            - fixed recurring downtimes not beeing saved under some conditions with multiple backends
            - fixed problem in servicegroup recurring downtimes
            - fixed half-visible panorama buttons in IE11
            - fixed panorama shape rotation in IE11
            - fixed panorama column error in minemap
            - fixed problem with utf8 characters in passwords
            - fixed problem with quotes in passwords

1.84-3   Sat May 31 16:10:07 CEST 2014