@@ -5,6 +5,7 @@ next:
           - added new configuration setting: max_process_memory
           - Panorama View:
             - fixed memory leak in generic url panel
+            - reload every 3 hours to prevent noncatchable memory leaks
 
 1.84-6   Wed Aug  6 11:24:12 CEST 2014
           - Panorama View:
